[gd_scene load_steps=6 format=3 uid="uid://bm6q1lt7kiyfi"]

[ext_resource type="Script" path="res://Battler/battler_unit.gd" id="1_55xs2"]
[ext_resource type="PackedScene" uid="uid://dmuec1cmq8j3p" path="res://Battler/Attributes/health_bar.tscn" id="3_gwsjg"]
[ext_resource type="Script" path="res://Battler/Attributes/attribute.gd" id="3_hfkfq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g0r45"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3wjel"]

[node name="BattlerUnit" type="CharacterBody3D"]
script = ExtResource("1_55xs2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_g0r45")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_3wjel")
skeleton = NodePath("../CollisionShape3D")

[node name="NavAgent" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5

[node name="HealthBar" parent="." node_paths=PackedStringArray("_attribute") instance=ExtResource("3_gwsjg")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12345, 0)
_attribute = NodePath("../Health")

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Health" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfkfq")

[node name="Power" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfkfq")

[node name="Speed" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfkfq")
min_value = 0.01

[node name="MoveSpeed" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfkfq")
_starting_value = 5.0

[node name="AttackRange" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_hfkfq")
_starting_value = 0.5
min_value = 0.01

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="value_changed" from="Health" to="." method="_on_health_value_changed"]
[connection signal="value_changed" from="Speed" to="." method="_on_speed_value_changed"]
[connection signal="value_changed" from="AttackRange" to="." method="_on_attack_range_value_changed"]
